# cuentasApp

./: .gitignore  CLAUDE.md  LICENSE  PLAN.md  README.md
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: a75ea7c7a03e_initial_schema_with_bills_tasks_and_.py
backend/app/: config.py  database.py  main.py
backend/app/models/: __init__.py  account.py  bill.py  payment.py  payment_method.py  task.py
backend/app/routers/: accounts.py  bills.py  payment_methods.py  payments.py  tasks.py
backend/app/schemas/: account.py  bill.py  payment.py  payment_method.py  task.py
backend/app/services/: driver_runner.py  encryption.py
backend/docs/: driver_spec.md
backend/drivers/: ecogas.py
docs/: architecture.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: AccountForm.jsx  AccountList.jsx  PaymentForm.jsx  PaymentMethodForm.jsx  PaymentMethodList.jsx
frontend/src/pages/: AccountsPage.jsx  BillsPage.jsx  PaymentMethodsPage.jsx  PaymentsPage.jsx
frontend/src/services/: api.js
