[project]
name = "cuentas-app-backend"
version = "0.1.0"
description = "Backend API para gestionar cuentas y pagos de servicios"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.25",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "cryptography>=42.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
dev = "uvicorn app.main:app --reload"

[tool.uv]
dev-dependencies = []
